<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/productsFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_products"/>
    <item
        android:id="@+id/salesFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/nav_sales"/>
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"/>
</menu>