<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- HOME FRAGMENT - RUTA CORREGIDA -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.inventario.py.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_product_detail"
            app:destination="@id/productDetailFragment"/>
        <action
            android:id="@+id/action_home_to_scanner"
            app:destination="@id/scannerFragment"/>
    </fragment>

    <!-- PRODUCTS FRAGMENT -->
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.inventario.py.ui.products.ProductsFragment"
        android:label="@string/nav_products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_products_to_detail"
            app:destination="@id/productDetailFragment"/>
        <action
            android:id="@+id/action_products_to_scanner"
            app:destination="@id/scannerFragment"/>
    </fragment>

    <!-- PRODUCT DETAIL FRAGMENT -->
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.inventario.py.ui.products.ProductDetailFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productId"
            app:argType="string"/>
    </fragment>

    <!-- SALES FRAGMENT -->
    <fragment
        android:id="@+id/salesFragment"
        android:name="com.inventario.py.ui.sales.SalesFragment"
        android:label="@string/nav_sales"
        tools:layout="@layout/fragment_sales"/>

    <!-- CART FRAGMENT -->
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.inventario.py.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart"/>

    <!-- REPORTS FRAGMENT -->
    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.inventario.py.ui.reports.ReportsFragment"
        android:label="@string/nav_reports"
        tools:layout="@layout/fragment_reports"/>

    <!-- SETTINGS FRAGMENT -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.inventario.py.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings"/>

    <!-- SCANNER FRAGMENT -->
    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.inventario.py.ui.scanner.ScannerFragment"
        android:label="@string/scan_barcode"
        tools:layout="@layout/fragment_scanner">
        <argument
            android:name="forSale"
            app:argType="boolean"
            android:defaultValue="false"/>
        <argument
            android:name="scanMode"
            app:argType="string"
            android:defaultValue="search"/>
    </fragment>

</navigation>